force-app/main/default/objects/Account/fields/DevPro_Field__c.field-meta.xml
<CustomField>
    <fullName>DevPro_Field__c</fullName>
    <label>DevPro Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>