force-app/main/default/objects/Account/fields/Partial_Field__c.field-meta.xml
<CustomField>
    <fullName>Partial_Field__c</fullName>
    <label>Partial Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>