force-app/main/default/objects/Account/fields/ser1__c.field-meta.xml
<CustomField>
    <fullName>ser1__c</fullName>
    <label>ser1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>