force-app/main/default/objects/Account/fields/serv2__c.field-meta.xml
<CustomField>
    <fullName>serv2__c</fullName>
    <label>serv2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>