force-app/main/default/objects/Account/fields/serv3__c.field-meta.xml
<CustomField>
    <fullName>serv3__c</fullName>
    <label>serv3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>