force-app/main/default/objects/Account/fields/sf1__c.field-meta.xml
<CustomField>
    <fullName>sf1__c</fullName>
    <label>sf1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>